--- a/modules/controlPanels/client/views/admin/form-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/admin/form-controlPanel.client.view.html
@@ -22,6 +22,16 @@
           <textarea name="content" data-ng-model="vm.controlPanel.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
         </div>
         <div class="form-group">
+          <label class="control-label" for="temp">Temp</label>
+          <input name="temp" type="number" ng-model="vm.controlPanel.temp" id="temp" class="form-control">
+        </div>
+        <div class="form-group">
+          <label class="control-label" for="online">Online</label>
+          <button name="online" type="button" class="btn btn-primary" ng-model="vm.controlPanel.online" id="online" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+            {{vm.controlPanel.online ? 'Online' : 'Offline'}}
+          </button>
+       </div>
+        <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.controlPanel._id ? 'Update' : 'Create'}}</button>
         </div>
       </fieldset>
