--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -11,5 +11,13 @@
       <span ng-if="!vm.controlPanel.user">Deleted User</span>
     </em>
   </small>
+  <strong class="lead" ng-bind="vm.controlPanel.temp"></strong>
+  <div class="table-responsive">
+    <table class="table table-hover table-striped">
+      <tr class="active">
+        <td ng-bind="vm.controlPanel.temp"> </td>
+      </tr>
+    </table>
+  </div>
   <p class="lead" ng-bind="vm.controlPanel.content"></p>
 </section>
