--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -29,7 +29,8 @@
     </ul>
   <h1 ng-bind="vm.controlPanel.temp + ' C'"></h1>
   <p class="lead" ng-bind="vm.controlPanel.content"></p>
-  <img class="img-responsive" src="modules/controlPanels/client/img/graph.gif" alt="graph"/>
+  <img class="img-responsive" src="http://www.ceramicindustry.com/ext/resources/CI/2003/12/Files/Images/95276.jpg" alt="graph"/>
+  <br>
   <button type="button" class="btn btn-primary">Edit</button>
   <button type="button" class="btn btn-success">Start</button>
   <button type="button" class="btn btn-warning">Stop</button>
