added controlpanel serach

--- a/modules/controlPanels/client/views/list-controlPanels.client.view.html
+++ b/modules/controlPanels/client/views/list-controlPanels.client.view.html
@@ -1,9 +1,16 @@
 <section>
   <div class="page-header">
-    <h1>ControlPanels</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <h1>ControlPanels</h1>
+      </div>
+      <div class="col-md-4" style="margin-top: 2em">
+        <input class="form-control col-md-4" type="text" ng-model="vm.search" placeholder="Search" ng-change="vm.figureOutItemsToDisplay()" />
+      </div>
+    </div>
   </div>
   <div class="list-group">
-    <a ng-repeat="controlPanel in vm.controlPanels | filter : isContextUserSelf()" ui-sref="controlPanels.view({ controlPanelId: controlPanel._id })" class="list-group-item">
+    <a ng-repeat="controlPanel in vm.pagedItems" ui-sref="controlPanels.view({ controlPanelId: controlPanel._id })" class="list-group-item">
       <small class="list-group-item-text">
         Posted on
         <span ng-bind="controlPanel.created | date:'mediumDate'"></span>
@@ -15,4 +22,6 @@
       <p class="list-group-item-text" ng-bind="controlPanel.content"></p>
     </a>
   </div>
+  
+  <uib-pagination boundary-links="true" max-size="8" items-per-page="vm.itemsPerPage" total-items="vm.filterLength" ng-model="vm.currentPage" ng-change="vm.pageChanged()"></uib-pagination>
 </section>
