--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -60,4 +60,7 @@
   </div>
 
 </div>
+
+<!-- TODO needs fixing  -->
+<input type="number" id="tempText" name="tempText" class="form-control" ng-model="vm.tempText" ng-change="vm.sendtemp()" value="{{vm.controlPanel.temp}}">
 </section>
