formatting and borken database update live

--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -30,7 +30,7 @@
         </ul>
       </li>
     </ul>
-  <h1 ng-bind="vm.controlPanel.temp + ' C'"></h1>
+  <h1 ng-bind="vm.controlPanel.temp.data + ' C'"></h1>
   <img class="img-responsive" src="http://www.ceramicindustry.com/ext/resources/CI/2003/12/Files/Images/95276.jpg" alt="graph"/>
   <br><br>
   <blockquote cite="http://">
