--- a/modules/controlPanels/client/views/list-controlPanels.client.view.html
+++ b/modules/controlPanels/client/views/list-controlPanels.client.view.html
@@ -20,6 +20,7 @@
       </small>
       <h4 class="list-group-item-heading" ng-bind="controlPanel.title"></h4>
       <p class="list-group-item-text" ng-bind="controlPanel.content"></p>
+      <p class="list-group-item-text" ng-bind="vm.temp"></p>
     </a>
   </div>
 
