--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" ng-strict-di>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,7 +8,7 @@
   <title page-title></title>
   <meta name="description" content="{{description}}">
   <meta name="fragment" content="!">
-  <meta name="theme-color" content="#feca1e"/>
+  <meta name="theme-color" content="#841F27" />
 
   <!-- Apple META -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -32,8 +33,27 @@
   <!-- Fav Icon -->
   <link href="/{{favicon}}" rel="shortcut icon" type="image/x-icon">
 
+  <!-- googleAnalyticsTrackingID -->
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-98093068-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
   <!-- Application CSS Files -->
-  {{#each cssFiles}}<link rel="stylesheet" href="/{{this}}">{{/each}}
+  {{#each cssFiles}}
+  <link rel="stylesheet" href="/{{this}}">{{/each}}
 </head>
 
 <body class="ng-cloak">
@@ -57,7 +77,13 @@
 
   <!--Embedding The User Object-->
   <script type="text/javascript">
-    var user = {{{ user }}};
+    var user = {
+      {
+        {
+          user
+        }
+      }
+    };
     var env = "{{ env }}";
   </script>
 
@@ -65,11 +91,18 @@
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
   <!--Application JavaScript Files-->
-    {{#each jsFiles}}<script type="text/javascript" src="/{{this}}"></script>{{/each}}
+  {{#each jsFiles}}
+  <script type="text/javascript" src="/{{this}}"></script>{{/each}}
 
   <!--owasp config sync-->
   <script type="text/javascript">
-    var sharedConfig = {{{ sharedConfig }}};
+    var sharedConfig = {
+      {
+        {
+          sharedConfig
+        }
+      }
+    };
     owaspPasswordStrengthTest.config(sharedConfig.owasp);
   </script>
 
