live sockets on list page

--- a/modules/controlPanels/client/views/list-controlPanels.client.view.html
+++ b/modules/controlPanels/client/views/list-controlPanels.client.view.html
@@ -13,15 +13,14 @@
     <a ng-repeat="controlPanel in vm.pagedItems" ui-sref="controlPanels.view({ controlPanelId: controlPanel._id })" class="list-group-item">
       <small class="list-group-item-text">
         <span ng-bind="controlPanel.content"></span>
-        <socketAdd pos="controlPanel">
-        </socketAdd>
+
         <!-- by -->
         <!-- <span ng-if="controlPanel.user" ng-bind="controlPanel.user.displayName"></span> -->
         <!-- <span ng-if="!controlPanel.user">Deleted User</span> -->
       </small>
-      <span class="badge" ng-bind="vm.temp + ' C'"></span>
+      <span class="badge" ng-bind="controlPanel.liveTemp"></span>
       <h4 class="list-group-item-heading" ng-bind="controlPanel.title"></h4>
-      <span class="badge">Last updated {{vm.updateTime | date : 'mediumTime'}}</span>
+      <span class="badge">Last updated {{controlPanel.updateTime | date : 'mediumTime'}}</span>
       <p ng-if="controlPanel.schedule" class="list-group-item-text" ng-bind="controlPanel.schedule"></p>
       <p ng-if="!controlPanel.schedule" class="list-group-item-text" >Not running</p>
     </a>
