--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -63,7 +63,13 @@
     <button type="button" class="btn btn-success">Start</button>
     <button type="button" class="btn btn-warning">Stop</button>
   </div>
+  <p ng-bind="vm.controlPanel.scheduleStatus"></p>
 
+  <div class="progress">
+  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="vm.controlPanel.scheduleProgress" aria-valuemin="0" aria-valuemax="100" style="width: {{vm.controlPanel.scheduleProgress}}%">
+    <span class="sr-only">{{vm.controlPanel.scheduleProgress}}% Complete</span>
+  </div>
+</div>
 </div>
 
 <input type="number" id="tempText" name="tempText" class="form-control" ng-model="vm.tempText" ng-change="vm.sendtemp()" value="{{vm.temp}}">
