--- a/modules/schedules/client/views/list-schedules.client.view.html
+++ b/modules/schedules/client/views/list-schedules.client.view.html
@@ -9,11 +9,11 @@
   <div class="list-group">
     <a ng-repeat="schedule in vm.schedules" ui-sref="schedules.edit({ scheduleId: schedule._id })" class="list-group-item">
       <small class="list-group-item-text">
-        Posted on
+        Created on
         <span ng-bind="schedule.created | date:'mediumDate'"></span>
-        by
+        <!-- by
         <span ng-if="schedule.user" ng-bind="schedule.user.displayName"></span>
-        <span ng-if="!schedule.user">Deleted User</span>
+        <span ng-if="!schedule.user">Deleted User</span> -->
       </small>
       <h4 class="list-group-item-heading" ng-bind="schedule.title"></h4>
       <p class="list-group-item-text" ng-bind="schedule.content"></p>
