--- a/modules/controlPanels/client/views/admin/form-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/admin/form-controlPanel.client.view.html
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
           <label class="control-label" for="temp">Temp</label>
-          <input name="temp" type="number" ng-model="vm.controlPanel.temp" id="temp" class="form-control">
+          <input name="temp" type="number" placeholder="0" ng-model="vm.temp" id="temp" class="form-control">
         </div>
         <div class="form-group">
           <label class="checkbox-inline"><input type="checkbox" ng-model="vm.controlPanel.online" value="">{{vm.controlPanel.online ? 'Online' : 'Offline'}}</label>
