--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -2,13 +2,13 @@
 <html lang="en" ng-strict-di>
 
 <head>
+  <meta name="theme-color" content="#841F27" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" user-scalable="no">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" >
   <title page-title></title>
   <meta name="description" content="{{description}}">
   <meta name="fragment" content="!">
-  <meta name="theme-color" content="#841F27" />
 
   <!-- Apple META -->
   <meta name="apple-mobile-web-app-capable" content="yes">
