--- a/modules/schedules/client/views/list-schedules.client.view.html
+++ b/modules/schedules/client/views/list-schedules.client.view.html
@@ -7,7 +7,7 @@
     </h1>
   </div>
   <div class="list-group">
-    <a ng-repeat="schedule in vm.schedules" ui-sref="schedules.edit({ scheduleId: schedule._id })" class="list-group-item">
+    <a ng-repeat="schedule in vm.schedules" ui-sref="schedules.program({ scheduleId: schedule._id })" class="list-group-item">
       <small class="list-group-item-text">
         Created on
         <span ng-bind="schedule.created | date:'mediumDate'"></span>
