--- a/modules/schedules/client/views/program-schedule.client.view.html
+++ b/modules/schedules/client/views/program-schedule.client.view.html
@@ -2,25 +2,32 @@
   <div class="page-header">
     <h1>Program {{vm.schedule.title}}</h1>
   </div>
-  <!-- <div class="pull-right">
-    <a ng-show="vm.schedule._id" class="btn btn-primary" ng-click="vm.remove()">
-      <i class="glyphicon glyphicon-trash"></i>
+  <div class="pull-right">
+    <a ui-sref="schedules.edit({ scheduleId: vm.schedule._id })" class="btn btn-info" >
+      <i class="glyphicon glyphicon-edit"></i>
     </a>
-  </div> -->
-  <!-- <div class="col-md-12">
-    <form name="vm.form.scheduleForm" class="form-horizontal" ng-submit="vm.save(vm.form.scheduleForm.$valid)" novalidate>
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label class="control-label" for="title">Title</label>
-          <input name="title" type="text" ng-model="vm.schedule.title" id="title" class="form-control" placeholder="Title" required autofocus>
-          <div ng-messages="vm.form.scheduleForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Schedule title is required.</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-default">{{vm.schedule._id ? 'Update' : 'Create'}}</button>
-        </div>
-      </fieldset>
-    </form>
-  </div> -->
+  </div>
+  <div class="container">
+    <!-- <h2>Hover Rows</h2> -->
+    <p>The .table-hover class enables a hover state on table rows:</p>
+    <table class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th>Order</th>
+          <th>Rate</th>
+          <th>Goal</th>
+          <th>Hold</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>John</td>
+          <td>Doe</td>
+          <td>john@example.com</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </section>
