only adding the lastest 400 DB and program page has a button
isaac helpped with $slice

--- a/modules/schedules/client/views/program-schedule.client.view.html
+++ b/modules/schedules/client/views/program-schedule.client.view.html
@@ -28,6 +28,7 @@
         </tr>
       </tbody>
     </table>
+    <button type="button" class='btn btn-default' ng-click="addSegment()">Add Segment</button>
   </div>
 
 </section>
