--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -18,22 +18,6 @@
     </em>
   </small>
   <h3>Temp over time</h3>
-  <ul class="nav nav-tabs">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Help</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          Dropdown <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
-    </ul>
   <h1 ng-bind="vm.temp + ' C'"></h1>
   <h2 >{{ vm.updateTime | date : 'short'}}</h2>
   <img class="img-responsive" src="http://www.ceramicindustry.com/ext/resources/CI/2003/12/Files/Images/95276.jpg" alt="graph"/>
@@ -57,8 +41,8 @@
   <h6>Settings</h6>
   <button type="button" class="btn btn-primary">Edit</button>
   <div class="btn-group">
-    <button type="button" class="btn btn-success">Start</button>
-    <button type="button" class="btn btn-warning">Stop</button>
+    <button type="button" class="btn btn-success">Send</button>
+    <button type="button" class="btn btn-warning">Cancel</button>
   </div>
   <p ng-bind="vm.controlPanel.scheduleStatus"></p>
 
