remove and redirect. Index update fix
added sortable but not used

--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -50,6 +50,8 @@
   <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="vm.controlPanel.scheduleProgress" aria-valuemin="0" aria-valuemax="100" style="width: {{vm.controlPanel.scheduleProgress}}%">
     <span class="sr-only">{{vm.controlPanel.scheduleProgress}}% Complete</span>
   </div>
+  <!-- <small><em>Object (changes type based on value)</em></small>
+<uib-progressbar class="progress-striped active" value="dynamic" type="{{vm.controlPanel.scheduleProgress}}">{{vm.controlPanel.scheduleProgress}} <i ng-show="showWarning">!!! Watch out !!!</i></uib-progressbar> -->
 </div>
 </div>
 
