--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -41,7 +41,7 @@
   <h6>Settings</h6>
   <button type="button" class="btn btn-primary">Edit</button>
   <div class="btn-group">
-    <button type="button" class="btn btn-success">Send</button>
+    <button type="button" class="btn btn-success"><i class="glyphicon glyphicon-glyphicon-fire">Start</button>
     <button type="button" class="btn btn-warning">Cancel</button>
   </div>
   <p ng-bind="vm.controlPanel.scheduleStatus"></p>
