--- a/modules/schedules/client/views/program-schedule.client.view.html
+++ b/modules/schedules/client/views/program-schedule.client.view.html
@@ -4,37 +4,45 @@
   </div>
   <div class="pull-right">
     <a ui-sref="schedules.edit({ scheduleId: vm.schedule._id })" class="btn btn-info" >
-      <i class="glyphicon glyphicon-edit"></i>
+      <i class="glyphicon glyphicon-edit"></i> Edit
     </a>
   </div>
   <div class="container">
     <!-- <h2>Hover Rows</h2> -->
-    <button type="button" class="btn btn-default" ng-click="isCollapsed = !isCollapsed">Intructions</button>
-    <div uib-collapse="!isCollapsed">
-      <div class="well well-lg">Please fill out each of the rows fully</div>
-      <h1>Add more content here Sam</h1>
-    </div>
     <table class="table table-hover table-striped">
       <thead>
         <tr>
+          <th>Move</th>
           <th>Order</th>
           <th>Rate</th>
           <th>Goal</th>
           <th>Hold</th>
+          <th>Remove</th>
         </tr>
       </thead>
       <tbody>
         <tr ng-repeat="segment in vm.schedule.program | orderBy: 'segment'">
-          <td name="segment" ng-bind="segment.segment = $index + 1"></td>
-          <td><input type="number" name="rate" ng-model="segment.rate" /></td>
-          <td><input type="number" name="goal" ng-model="segment.goal" /></td>
-          <td><input type="number" name="hold" ng-model="segment.hold" /></td>
-          <td> <button type="button" class='btn btn-warning' ng-click="vm.remove(segment)">Remove</button></td>
+          <td>
+          <button type="button" ng-if="$first" class='btn btn-default disabled'><i class="glyphicon glyphicon-menu-up"></i></button>
+          <button type="button" ng-if="!$first" class='btn btn-default' ng-click="vm.up(segment)"><i class="glyphicon glyphicon-menu-up"></i></button>
+          <button type="button" ng-if="!$last" class='btn btn-default' ><i class="glyphicon glyphicon-menu-down"></i></button>
+          <button type="button" ng-if="$last" class='btn btn-default disabled' ng-click="vm.down(segment)"><i class="glyphicon glyphicon-menu-down"></i></button>
+        </td>
+          <td name="segment"><h6 ng-bind="segment.segment = $index + 1"></h6></td>
+          <td><input id="rate" uib-tooltip='what is rate' type="number" class="form-control" name="rate" ng-model="segment.rate" required/></td>
+          <td><input id="goal" uib-tooltip='what is goal' type="number" class="form-control" name="goal" ng-model="segment.goal" required/></td>
+          <td><input id="hold" uib-tooltip='what is hold' type="number" class="form-control" name="hold" ng-model="segment.hold" required/></td>
+          <td><button type="button" uib-tooltip='Remove this segment' class='btn btn-warning' ng-click="vm.remove(segment)"><i class="glyphicon glyphicon-remove"></i></button></td>
         </tr>
       </tbody>
     </table>
-    <button type="button" class='btn btn-default' ng-click="vm.addSegment()">Add Segment</button>
-    <button type="button" class='btn btn-success' ng-click="vm.save()">Save</button>
-  </div>
+    <button type="button" class="btn btn-default" ng-click="isCollapsed = !isCollapsed"><i class="glyphicon glyphicon-education"></i>  Intructions</button>
+    <button type="button" class='btn btn-default' ng-click="vm.addSegment()"><i class="glyphicon glyphicon-plus-sign"></i>  Add Segment</button>
+    <button type="button" class='btn btn-success' ng-click="vm.save()"><i class="glyphicon glyphicon-floppy-save"></i>  Save</button>
+    <div uib-collapse="!isCollapsed">
+      <div class="well well-lg">Please fill out each of the rows fully</div>
+      <h1>Add more content here Sam</h1>
+    </div>
+  </>
 
 </section>
