working reording and prevention of leaving when changes have been made
working password requirments, now set to 5 length min
adding graph but not working

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -79,9 +79,7 @@
   <script type="text/javascript">
     var user = {
       {
-        {
           user
-        }
       }
     };
     var env = "{{ env }}";
@@ -97,10 +95,12 @@
   <!--owasp config sync-->
   <script type="text/javascript">
     var sharedConfig = {
-      {
-        {
-          sharedConfig
-        }
+      owasp: {
+        allowPassphrases: true,
+        maxLength: 128,
+        minLength: 5,
+        minPhraseLength: 15,
+        minOptionalTestsToPass: 2
       }
     };
     owaspPasswordStrengthTest.config(sharedConfig.owasp);
